Restructuring templates. Applying changes to views.

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,4 +17,5 @@
   <a href="{% url 'account_login' %}">Log in</a>
   <a href="{% url 'account_signup' %}">Sign up</a>
 {% endif %}
+<p><a href="{% url 'admin:index' %}">link to admin panel</a></p>
 {% endblock %}
